@@ -243,6 +243,14 @@ void            gperl_callback_invoke  (GPerlCallback * callback,
                                         GValue        * return_value,
                                         ...);
 
+/*
+ * exception handling
+ */
+
+int  gperl_install_exception_handler (GClosure * closure);
+void gperl_remove_exception_handler  (int tag);
+void gperl_run_exception_handlers    (void);
+
 
 /*
  * gparamspec.h / GParamSpec.xs
